src/test/ui/issues/issue-16966.stderr
error[E0282]: type annotations needed
  --> $DIR/issue-16966.rs:2:5
   |
LL |     panic!(std::default::Default::default());
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type for `M`
   |
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
